Se agrega el modulo de historias clinicas
